# agentic-workflow

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  install-copilot.ps1  install-devin.sh  install-droid.ps1  install-droid.sh  install.ps1  uninstall-devin.sh  uninstall-droid.ps1  uninstall-droid.sh
.claude/worktrees/agent-a187959b/crew-board/: CLAUDE.md  Cargo.toml
.claude/worktrees/agent-a187959b/crew-board/examples/: key_debug.rs
.claude/worktrees/agent-a187959b/crew-board/src/: app.rs  hook_bridge.rs  hook_server.rs  launcher.rs  main.rs  orchestration.rs  security.rs  settings.rs  worktree.rs
.claude/worktrees/agent-a187959b/crew-board/src/data/: activity.rs  beads.rs  file_claims.rs  mod.rs
.claude/worktrees/agent-a187959b/crew-board/src/terminal/: mod.rs  pty.rs  widget.rs
.claude/worktrees/agent-a187959b/crew-board/src/ui/: activity_view.rs  beads_view.rs  cleanup_popup.rs  config_view.rs  cost_view.rs  create_popup.rs  help_popup.rs  mod.rs  (+5 more)
mcp/agentic-workflow-server/: pyproject.toml
mcp/agentic-workflow-server/.github/agents/: crew-accessibility-reviewer.agent.md  crew-api-guardian.agent.md  crew-architect.agent.md  crew-ba-designer.agent.md  crew-developer.agent.md  crew-implementer-loop-mode-ref.agent.md  crew-implementer.agent.md  crew-performance-analyst.agent.md  crew-planner.agent.md  crew-product-manager.agent.md  crew-quality-guard.agent.md  crew-reviewer.agent.md  crew-security-auditor.agent.md  crew-skeptic.agent.md  crew-technical-writer.agent.md  crew-worktree.agent.md  crew.agent.md
mcp/agentic-workflow-server/.github/scripts/: check-workflow-complete.py  crew-status.py  crew_orchestrator.py  shared_utils.py  workflow_state.py
mcp/agentic-workflow-server/agentic_workflow_server/: __init__.py  config_tools.py  crew_definitions.py  orchestration_tools.py  server.py  state_tools.py
mcp/agentic-workflow-server/tests/: test_composite_tools.py  test_config_tools.py  test_config_tools_extended.py  test_crew_definitions.py  test_crew_orchestrator.py  test_custom_phases.py  test_orchestration_tools.py  test_resources.py  test_scripts.py  test_security.py  test_state_tools.py  test_state_tools_extended.py
(+288 files in other folders)
