[package]
name = "crew-board"
version = "0.5.0"
edition = "2021"
description = "Norton Commander-style TUI dashboard for agentic-workflow tasks"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Spiris-Innovation-Tech-Dev/agentic-workflow"

[[bin]]
name = "crew-board"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
toml = "0.8"
anyhow = "1"
tui-input = "0.11"
regex = "1"
portable-pty = "0.9"
vt100 = "0.15"
base64 = "0.22"
tiny_http = "0.12"
rand = "0.8"

[[example]]
name = "terminal_spike"
path = "examples/terminal_spike.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
